# citra-solve

./: .gitignore  Cargo.toml  README.md
benches/: solve_benchmark.rs
examples/: check_coverage.rs  debug_centroid.rs  debug_extraction.rs  debug_hypothesis.rs  debug_index_patterns.rs  debug_matching.rs  debug_neighbors.rs  debug_patterns.rs  debug_real_image.rs  debug_sip.rs  debug_solve.rs  debug_solver.rs  debug_star_positions.rs  find_target_quad.rs  solve_synthetic.rs  verify_astrometry.rs  verify_wcs.rs
src/: lib.rs
src/bench/: comparison.rs  harness.rs  mod.rs  synthetic.rs
src/catalog/: builder.rs  error.rs  index.rs  mod.rs  reader.rs  star.rs
src/core/: math.rs  mod.rs  types.rs
src/extract/: centroid.rs  mod.rs
src/pattern/: hash.rs  matcher.rs  mod.rs  quad.rs  tetra.rs
src/solver/: error.rs  hypothesis.rs  mod.rs  refine.rs  solution.rs  solver.rs  verify.rs
src/wcs/: distortion.rs  mod.rs  projection.rs  transform.rs
